--- a/team.html
+++ b/team.html
@@ -27,6 +27,7 @@
         <div class="topnav" id="myTopnav">
           <a href="./index.html">Epic Prestige</a>
           <a href="./cube-it.html">cube-it</a>
+          <a href="./Move-it.html">Move.It</a>
           <a href="./launcher.html">launcher</a>
           <a href="./team.html"  class="active">team</a>
           <a href="./gallery.html">gallery</a>
