--- a/Move-it.html
+++ b/Move-it.html
@@ -82,14 +82,17 @@
             </p>
           </div>
           <div class="hero">
+            <div>
+            <div class="button" id="download">
+              <a href="https://epic-prestige.itch.io/2d-game-alpha-01" target="_blank">Go to itch.io</a>
+              </a>
+              </div> 
               <div class="button" id="download">
-                  <a href="https://epic-prestige.itch.io/2d-game-alpha-01" target="_blank">Go to itch.io</a>
-                  </a>
-                </div> 
-                <div class="button" id="download">
-                    <a href="./Move.It.apk" target="">download apk</a>
-                    </a>
-                  </div> 
+                <a href="./Move.It.apk" download="Move.It.apk">download apk</a>
+                </a>
+              </div> 
+            </div>
+        </div> 
         </section>
         </div>
       </main>
