--- a/cube-it.html
+++ b/cube-it.html
@@ -72,10 +72,8 @@
             </a>
           </div>
         </section>
-
         <!--Second page-->
-
-        <section class="page">
+        <section class="small-page">
           <div class="details">
             <h1>itch.io</h1>
             <h2>
@@ -85,40 +83,42 @@
              make sure to give us feedback there.
             </p>
           </div>
-          <div class="hero">
-              <div class="button" id="download">
-                  <a href="https://epic-prestige.itch.io/cubeit" target="_blank">download</a>
-                  </a>
-                </div> 
+          <div class="details">
+            <div class="button" id="download">
+              <a href="https://epic-prestige.itch.io/cubeit" target="_blank">download</a>
+               </a>
+            </div> 
+        </div>
+          
         </section>
         <!--third page-->
 
         <section class="page-cubeit" >
             <h1 style="text-align:center">Waves</h1>
-            <div class="row">
-            <div class="column">
-            <img src="./assets/img/CubeIt/wave 1.png" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
-            <h2> Wave 1</h2>
-            <p>WAVE 1 IS ALL ABOUT GETTING USED TO THE GAME MECHANIC AND EXPLORING CUBE.IT THAT DOES NOT MEAN, THAT THE GAME WILL NOT BE CHALLENGING.</p>
+          <div class="row">
+              <div class="column">
+                <img src="./assets/img/CubeIt/wave 1.png" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+                <h2> Wave 1</h2>
+               <p>WAVE 1 IS ALL ABOUT GETTING USED TO THE GAME MECHANIC AND EXPLORING CUBE.IT THAT DOES NOT MEAN, THAT THE GAME WILL NOT BE CHALLENGING.</p>
+              </div>
+              <div class="column">
+                <img src="./assets/img/CubeIt/wave 2.png" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+                <h2> Wave 2</h2>
+                <p>WAVE 1 IS ALL ABOUT GETTING USED TO THE GAME MECHANIC AND EXPLORING CUBE.IT THAT DOES NOT MEAN, THAT THE GAME WILL NOT BE CHALLENGING.</p>
             </div>
-             <div class="column">
-            <img src="./assets/img/CubeIt/wave 2.png" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
-            <h2> Wave 2</h2>
+            <div class="column">
+             <img src="./assets/img/CubeIt/Wave 3.png" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+              <h2> Wave 3</h2>
+              <p>WAVE 1 IS ALL ABOUT GETTING USED TO THE GAME MECHANIC AND EXPLORING CUBE.IT THAT DOES NOT MEAN, THAT THE GAME WILL NOT BE CHALLENGING.</p>
+            </div>
+          <div class="column">
+            <img src="./assets/img/CubeIt/wave 4.png" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+            <h2> Wave 4</h2>
             <p>WAVE 1 IS ALL ABOUT GETTING USED TO THE GAME MECHANIC AND EXPLORING CUBE.IT THAT DOES NOT MEAN, THAT THE GAME WILL NOT BE CHALLENGING.</p>
-           </div>
-           <div class="column">
-          <img src="./assets/img/CubeIt/Wave 3.png" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
-          <h2> Wave 3</h2>
-            <p>WAVE 1 IS ALL ABOUT GETTING USED TO THE GAME MECHANIC AND EXPLORING CUBE.IT THAT DOES NOT MEAN, THAT THE GAME WILL NOT BE CHALLENGING.</p>
-         </div>
-         <div class="column">
-        <img src="./assets/img/CubeIt/wave 4.png" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-        <h2> Wave 4</h2>
-            <p>WAVE 1 IS ALL ABOUT GETTING USED TO THE GAME MECHANIC AND EXPLORING CUBE.IT THAT DOES NOT MEAN, THAT THE GAME WILL NOT BE CHALLENGING.</p>
-        </div>
+          </div>
         </div>
 
-<div id="myModal" class="modal">
+          <div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
 
@@ -162,7 +162,7 @@
            </div>
           </div>
         </section>
-        </div>
+        </section>
       </main>
     </div>
     <!--  JavaScript for the nav bar-->
