--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
         <section class="page">
           <div class="details">
             <h1>
-              
+              Antony Melendez
             </h1>
             <h2>
 
