--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
               Antony Melendez
             </h1>
             <h2>
-
+              Founder of Epic Prestige
             </h2>
             <p>
 
