--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
               Founder of Epic Prestige
             </h2>
             <p>
-
+              Programmer - Game designer - Animator - 3D artist
             </p>
           </div>
           <div class="hero">
