--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
         <section class="page">
           <div class="details">
             <h1>
-              Antony Melendez
+              <a href="" target="_blank">Antony Melendez</a>
             </h1>
             <h2>
               Founder of Epic Prestige
@@ -61,7 +61,11 @@
           </div>
           <div class="hero">
             <a href="cube-it.html">
-             
+              <img
+              class="mainImg-left"
+              src="assets/img/Team/Antony.jpg"
+              alt="Cube.It left"
+            />
           </div>
         </section>
 
