--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,7 @@
           <a href="./team.html">team</a>
           <a href="./gallery.html" class="active">gallery</a>
           <a href="./news.html">news</a>
+          <a href="./about.html">about</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <svg width="30" height="20" viewBox="0 0 43 23" fill="none" xmlns="http://www.w3.org/2000/svg">
               <line y1="1.5" x2="43" y2="1.5" stroke="white" stroke-width="3"/>
