--- a/team.html
+++ b/team.html
@@ -61,7 +61,7 @@
             </p>
           </div>
           <div class="hero">
-              <img
+              <img class="test"
               class="mainImg-left"
               src="assets/img/Team/Antony.jpg"
               alt="Cube.It left"
