Better image response

--- a/team.html
+++ b/team.html
@@ -60,8 +60,8 @@
               Programmer - Game designer - Animator - 3D artist
             </p>
           </div>
-          <div class="hero">
-              <img class="test"
+          <div class="team">
+              <img
               class="mainImg-left"
               src="assets/img/Team/Antony.jpg"
               alt="Cube.It left"
