--- a/cube-it.html
+++ b/cube-it.html
@@ -74,7 +74,7 @@
           </div>
         </section>
         <!--Second page-->
-        <section class="small-page">
+        <section class="page">
           <div class="details">
             <h1>itch.io</h1>
             <h2>
