--- a/about.html
+++ b/about.html
@@ -78,8 +78,8 @@
             </h2>
             <p>
               First ever title relesed was cube-it (JAN-2019) later followed by its mobile sequel 
-              Move-it (june-2019). A brand new title is currently on the works (The Out break)
-              This new game will be a huge step up in the studios productivity
+              Move-it (June-2019). A brand new title is currently on the works (The Out break)
+              This new game will be a huge step up in the studios productivity.
             </p>
           </div>
           <div class="hero">
