--- a/cube-it.html
+++ b/cube-it.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="Icon" href="assets/img/EpicPrestigeLogoPng.png" />
+    <link rel="Icon" href="assets/img/EcpicPrestigeLogoPng.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,300,500&display=swap"
       rel="stylesheet"
@@ -26,7 +26,7 @@
       <header>
         <div class="topnav" id="myTopnav">
           <a href="./index.html" >Epic Prestige</a>
-          <a href="./cube-it.html" class="active">cube-it</a>
+          <a href="./cube-it.html" class="active">Horizon</a>
           <a href="./Move-it.html">Move.It</a>
           <a href="./team.html">team</a>
           <a href="./about.html">about</a>
@@ -47,7 +47,7 @@
 
         <section class="page">
           <div class="details">
-            <h1>cube-it</h1>
+            <h1>Horizon</h1>
             <h2>Version 1.0</h2>
             <p>Cube.It is a computer game in 
               which the player is a cube and you have to control it so you can make
