--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header>
         <div class="topnav" id="myTopnav">
           <a href="./index.html" class="active">Epic Prestige</a>
-          <a href="./cube-it.html">cube-it</a>
+          <a href="./cube-it.html">Horizon</a>
           <a href="./Move-it.html">Move.It</a>
           <a href="./team.html">team</a>
           <a href="./about.html">about</a>
@@ -44,11 +44,10 @@
       <main>
 
         <!--main page-->
-
         <section class="page">
           <div class="details">
             <h1>Welcome</h1>
-            <h2>To the official Epic Prestige website</h2>
+            <h2>To the official Night shield website</h2>
             <p>Here you will find all the details of all of our products.</p>
           </div>
           <div class="hero">
