--- a/Move-it.html
+++ b/Move-it.html
@@ -26,7 +26,7 @@
       <header>
         <div class="topnav" id="myTopnav">
           <a href="./index.html" >Epic Prestige</a>
-          <a href="./cube-it.html">Cube.It</a>
+          <a href="./cube-it.html">Horizon</a>
           <a href="./Move-it.html" class="active">Move.It</a>
           <a href="./team.html">team</a>
           <a href="./about.html">about</a>
