--- a/team.html
+++ b/team.html
@@ -26,7 +26,7 @@
       <header>
         <div class="topnav" id="myTopnav">
           <a href="./index.html">Epic Prestige</a>
-          <a href="./cube-it.html">cube-it</a>
+          <a href="./cube-it.html">Horizon</a>
           <a href="./Move-it.html">Move.It</a>
           <a href="./team.html"  class="active">team</a>
           <a href="./about.html">about</a>
