--- a/Move-it.html
+++ b/Move-it.html
@@ -26,7 +26,7 @@
       <header>
         <div class="topnav" id="myTopnav">
           <a href="./index.html" >Epic Prestige</a>
-          <a href="./cube-it.html">Horizon</a>
+          <a href="./Horizon.html">Horizon</a>
           <a href="./Move-it.html" class="active">Move.It</a>
           <a href="./team.html">team</a>
           <a href="./about.html">about</a>
@@ -39,12 +39,9 @@
           </a>
         </div>
       </header>  
-
       <!--Main content-->
       <main>
-
         <!--main page-->
-
         <section class="page">
           <div class="details">
             <h1>Move.It</h1>
@@ -68,7 +65,6 @@
         </section>
 
         <!--Second page-->
-
         <section class="page">
           <div class="details">
             <h1>itch.io</h1>
