--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="Icon" href="assets/img/EpicPrestigeLogoPng.png" />
+    <link rel="Icon" href="assets/img/HorizonLogo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,300,500&display=swap"
       rel="stylesheet"
@@ -16,7 +16,7 @@
       rel="icon"
       type="x/icon"
       sizes="1500x1500"
-      href="assets/img/EpicPrestigeLogoPng.ico"
+      href="assets/img/HorizonLogo.png"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -26,7 +26,7 @@
       <header>
         <div class="topnav" id="myTopnav">
           <a href="./index.html">Epic Prestige</a>
-          <a href="./cube-it.html">Horizon</a>
+          <a href="./Horizon.html">Horizon</a>
           <a href="./Move-it.html">Move.It</a>
           <a href="./team.html" >team</a>
           <a href="./about.html"  class="active">about</a>
