--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="Icon" href="assets/img/EpicPrestigeLogoPng.png" />
+    <link rel="Icon" href="assets/img/Night shield Logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,300,500&display=swap"
       rel="stylesheet"
@@ -15,7 +15,7 @@
       rel="icon"
       type="x/icon"
       sizes="1500x1500"
-      href="assets/img/EpicPrestigeLogoPng.ico"
+      href="assets/img/Night shield Logo.png"
     />
     <!--Main style-->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -25,8 +25,8 @@
       <!-- This is the nav bar-->
       <header>
         <div class="topnav" id="myTopnav">
-          <a href="./index.html" class="active">Epic Prestige</a>
-          <a href="./cube-it.html">Horizon</a>
+          <a href="./index.html" class="active">Night Shield Studio</a>
+          <a href="./Horizon.html">Horizon</a>
           <a href="./Move-it.html">Move.It</a>
           <a href="./team.html">team</a>
           <a href="./about.html">about</a>
@@ -39,15 +39,13 @@
           </a>
         </div>
       </header>  
-
       <!--Main content-->
       <main>
-
         <!--main page-->
         <section class="page">
           <div class="details">
             <h1>Welcome</h1>
-            <h2>To the official Night shield website</h2>
+            <h2>To the official Night shield Studio website</h2>
             <p>Here you will find all the details of all of our products.</p>
           </div>
           <div class="hero">
@@ -65,9 +63,7 @@
             </a>
           </div>
         </section>
-
         <!--Second page-->
-
         <section class="page">
           <div class="details">
             <h1>The Launcher</h1>
