--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       <!-- This is the nav bar-->
       <header>
         <div class="topnav" id="myTopnav">
-          <a href="./index.html">Epic Prestige</a>
+          <a href="./index.html">Night Shield Studio</a>
           <a href="./Horizon.html">Horizon</a>
           <a href="./Move-it.html">Move.It</a>
           <a href="./team.html" >team</a>
@@ -48,7 +48,7 @@
         <section class="page">
           <div class="details">
             <h1>
-              The goal for epic prestige
+              The goal for Night shield studio
             </h1>
             <h2>
               consumers
@@ -68,14 +68,14 @@
         <section class="page">
           <div class="details">
             <h1> 
-               What is epic prestige?
+               What is night shield studio?
             </h1>
             <h2>
-              Epic prestige was founded by Antony Melendez in late 2018
+              night shield studio was founded by Antony Melendez in early 2019
             </h2>
             <p>
               First ever title relesed was cube-it (JAN-2019) later followed by its mobile sequel 
-              Move-it (June-2019). A brand new title is currently on the works (The Out break)
+              Move-it (June-2019). A brand new title is currently on the works (Styx)
               This new game will be a huge step up in the studios productivity.
             </p>
           </div>
