--- a/Horizon.html
+++ b/Horizon.html
@@ -25,7 +25,7 @@
       <!-- This is the nav bar-->
       <header>
         <div class="topnav" id="myTopnav">
-          <a href="./index.html" >Epic Prestige</a>
+          <a href="./index.html" >Night Shield Studio</a>
           <a href="./Horizon.html" class="active">Horizon</a>
           <a href="./Move-it.html">Move.It</a>
           <a href="./team.html">team</a>
