--- a/team.html
+++ b/team.html
@@ -51,7 +51,7 @@
               <a href="https://antony-melendez.github.io/MyPortfolio.io/" target="_blank">Antony Melendez</a>
             </h1>
             <h2>
-              Founder of Epic Prestige
+              Founder of Night shield studio
             </h2>
             <p>
               Programmer - Game designer - Animator - 3D artist
@@ -65,10 +65,8 @@
             />
           </div>
         </section>
-
         <!--Second page-->
-
-        <section class="page">
+        <!--><section class="page">
           <div class="details">
             <h1> 
                
@@ -84,6 +82,7 @@
             
           </div>
         </section>
+        -->>
       </div>
       </main>
     </div>
