--- a/Horizon.html
+++ b/Horizon.html
@@ -49,7 +49,7 @@
           <div class="details">
             <h1>Horizon</h1>
             <h2>Version 1.0</h2>
-            <p>Cube.It is a computer game in 
+            <p>Horizon is a computer game in 
               which the player is a cube and you have to control it so you can make
                it to the end of each level, but keep in mind this game will keep you busy 
                for a while as many find it "too hard" "too fast". You think you got what it
