--- a/about.html
+++ b/about.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="Icon" href="assets/img/HorizonLogo.png" />
+    <link rel="Icon" href="assets/img/Night shield Logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,300,500&display=swap"
       rel="stylesheet"
     />
     <link rel="" href="./assets/js/app.js">
-    <title>Team</title>
+    <title>About</title>
     <!--Main style-->
     <link
       rel="icon"
       type="x/icon"
       sizes="1500x1500"
-      href="assets/img/HorizonLogo.png"
+      href="assets/img/Night shield Logo.png"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -74,8 +74,8 @@
               night shield studio was founded by Antony Melendez in early 2019
             </h2>
             <p>
-              First ever title relesed was cube-it (JAN-2019) later followed by its mobile sequel 
-              Move-it (June-2019). A brand new title is currently on the works (Styx)
+              First ever title relesed was cube-it (JAN-2019) [Now known as Horizon] later followed by its 
+              mobile sequel Move-it (June-2019). A brand new title is currently on the works (Styx)
               This new game will be a huge step up in the studios productivity.
             </p>
           </div>
